# TinyWorld

./: .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DYNAMIC_TOOL_ROUTING_FIX_REPORT.md  EMOTION_EFFECTS_SPEC.md  FIX_REPORT_中文.md  FRONTEND_REFRESH_FIX_REPORT.md  FRONTEND_WEREWOLF_FIX_REPORT.md  HANDOFF.en.md  HANDOFF.md  LEFT_SNAPSHOT_REFRESH_FIX_REPORT.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  Start.bat  Stop.bat  TOOL_AUDIT_PRIVATE_ROOM_FIX_REPORT.md  TOOL_PRUNE_LLM_EXPRESSION_FIX_REPORT.md  TOOL_RELATIONSHIP_ROUTING_FIX_REPORT.md  WEREWOLF_LLM_UI_REFRESH_FIX_REPORT.md  config.example.yaml  docker-compose.local-rootfs.yml  docker-compose.yml  pyproject.toml  start.sh
backend/app/: __init__.py  main.py
docker/nas/: .env.example  Dockerfile  Dockerfile.local-rootfs  README.md  build-with-mirrors.sh  docker-compose.local-rootfs.yml  docker-compose.yml  prepare-local-rootfs.sh  prepare-wheelhouse.sh  start-nas.sh
docs/: INTERVENTION_ABILITY_PLUGIN_SPEC.md  PLACEHOLDER_INTERFACES.md  TOOL_LOGIC_REVIEW_NOTES_FOR_55PRO.md  WORLDVIEW_IMPORT_OPTIMIZATION_REPORT_中文.md  WORLDVIEW_TOOLSET_PLUGIN_SPEC.md
docs/presets/: agent_special_toolsets.json  core_basic_toolset.json  default_modern_toolset.json  default_modern_world_toolset.json  default_modern_worldview.json  finance_investing_toolset.json  (+2 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: backend.sh  dev.sh  frontend.sh  start-desktop.sh  stop.sh
(+150 files in other folders)
